<div class="container"> as parent for <app>

--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,11 @@
 
 <body>
 
-  <app>
-    Loading...
-  </app>
+  <div class="container">
+    <app>
+      Loading...
+    </app>
+  </div>
 
   <!-- Google Analytics: change UA-71073175-1 to be your site's ID -->
   <script>
