login + app animation

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
   <div class="container">
     <app>
-      Loading...
+      Loading ...
     </app>
   </div>
 
@@ -31,6 +31,7 @@
   <script src="/webpack-dev-server.js"></script>
   <% } %>
 
+  <!-- from bootstrap -->
   <script type="application/javascript">
     /*!
      * IE10 viewport hack for Surface/desktop Windows 8 bug
