--- a/src/index.html
+++ b/src/index.html
@@ -31,32 +31,8 @@
   <script src="/webpack-dev-server.js"></script>
   <% } %>
 
-  <!-- from bootstrap -->
-  <script type="application/javascript">
-    /*!
-     * IE10 viewport hack for Surface/desktop Windows 8 bug
-     * Copyright 2014-2015 Twitter, Inc.
-     * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
-     */
-
-    // See the Getting Started docs for more information:
-    // http://getbootstrap.com/getting-started/#support-ie10-width
-
-    (function () {
-      'use strict';
-
-      if (navigator.userAgent.match(/IEMobile\/10\.0/)) {
-        var msViewportStyle = document.createElement('style');
-        msViewportStyle.appendChild(
-          document.createTextNode(
-            '@-ms-viewport{width:auto!important}'
-          )
-        );
-        document.querySelector('head').appendChild(msViewportStyle)
-      }
-
-    })();
-  </script>
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
 
 </body>
 </html>
